--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
         "@angular/platform-browser-dynamic": "^14.1.0",
         "@angular/router": "^14.1.0",
         "angular-in-memory-web-api": "^0.14.0",
+        "font-awesome": "^4.7.0",
+        "hammerjs": "^2.0.8",
+        "jquery": "^3.6.0",
+        "ngx-gallery": "^5.10.0",
         "ngx-owl-carousel-o": "^14.0.1",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
